AX: Implement off-main-thread AXTextMarkerForIndexAttribute and AXIndexForTextMarkerAttribute https://bugs.webkit.org/show_bug.cgi?id=267666 rdar://problem/121157922

Reviewed by Andres Gonzalez.

Also adds two new layout tests with basic coverage for these APIs.

Fixes a bug in AXPreviousTextMarkerForTextMarkerAttribute where AXDirection::Next
was used instead of AXDirection::Previous, which broke test text-marker-range-with-unordered-markers.html.

* LayoutTests/accessibility/ax-thread-text-apis/text-marker-for-index-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-for-index.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-range-with-unordered-markers-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-range-with-unordered-markers.html: Added.
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::hasSameObjectAndOffset const):
(WebCore::AXTextMarker::offsetFromRoot const):
(WebCore::AXTextMarker::nextMarkerFromOffset const):
* Source/WebCore/accessibility/AXTextMarker.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):

Canonical link: https://commits.webkit.org/273234@main